--- a/decidr-web/src/app/app.html
+++ b/decidr-web/src/app/app.html
@@ -1,7 +1,19 @@
-<main class="main">
-  <div class="content">
-    <h1 class="row justify-content-center">Decidr</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/home">Decidr</a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
+      <li class="nav-item me-3">
+        <a class="nav-link" href="/home">Home</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="/register">Register</a>
+      </li>
+    </ul>
   </div>
-</main>
+</nav>
 
-<router-outlet />
+
+<router-outlet></router-outlet>
