--- a/decidr-web/src/app/login/login.html
+++ b/decidr-web/src/app/login/login.html
@@ -4,12 +4,12 @@
       <h3>Login</h3>
       <form (ngSubmit)="login()">
         <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input name="username" class="form-control" required />
+            <label for="username" class="form-label">Username</label>
+            <input [(ngModel)]="username" name="username" id="username" class="form-control" required />
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input name="password" type="password" class="form-control" required />
+            <label for="password" class="form-label">Password</label>
+            <input [(ngModel)]="password" name="password" id="password" type="password" class="form-control" required />
         </div>
         <button type="submit" class="btn btn-primary w-100">Login</button>
       </form>
