added card activity entity; updated user to have email

--- a/decidr-web/src/app/register/register.html
+++ b/decidr-web/src/app/register/register.html
@@ -8,6 +8,10 @@
           <input [(ngModel)]="name" name="name" class="form-control" required />
         </div>
         <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input [(ngModel)]="email" name="email" class="form-control" required />
+        </div>
+        <div class="mb-3">
           <label class="form-label">Username</label>
           <input [(ngModel)]="username" name="username" class="form-control" required />
         </div>
