--- a/decidr-web/src/app/set-result/set-result.html
+++ b/decidr-web/src/app/set-result/set-result.html
@@ -3,6 +3,7 @@
     <a [routerLink]="['/home']" class="btn btn-secondary">Back to Home</a>
     @if (setResult) {
       <h2>{{ setResult.name }} Results</h2>
+      Congrats! We've chosen or you. We have randomly chosen one of the top liked cards in the set. Enjoy!
     }
     <div></div>
   </div>
