--- a/decidr-web/src/app/app.html
+++ b/decidr-web/src/app/app.html
@@ -2,18 +2,24 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/home">Decidr</a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
-      <li class="nav-item me-3">
-        <a class="nav-link" href="/home">Home</a>
-      </li>
-      <li class="nav-item me-3">
-        <a class="nav-link" href="/login">Login</a>
-      </li>
-      <li class="nav-item me-3">
-        <a class="nav-link" href="/register">Register</a>
-      </li>
+      @if (isLoggedIn()) {
+        <li class="nav-item me-3">
+          <a class="nav-link" href="/home">Home</a>
+        </li>
+        <li class="nav-item me-3">
+          <a class="nav-link" (click)="logout()" style="cursor: pointer;">Logout</a>
+        </li>
+      }
+      @if (!isLoggedIn()) {
+        <li class="nav-item me-3">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item me-3">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+      }
     </ul>
   </div>
 </nav>
-
 
 <router-outlet></router-outlet>
