--- a/decidr-web/src/app/login/login.html
+++ b/decidr-web/src/app/login/login.html
@@ -13,6 +13,9 @@
         </div>
         <button type="submit" class="btn btn-primary w-100">Login</button>
       </form>
+      <div class="text-center mt-3">
+        Don't have an account? <a href="/register">Register here</a>
+      </div>
     </div>
   </div>
 </div>
