--- a/decidr-web/src/app/app.html
+++ b/decidr-web/src/app/app.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home">Decidr</a>
+    <a class="navbar-brand" href="/">Decidr 🤔</a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
       @if (isLoggedIn()) {
         <li class="nav-item me-3">
