--- a/decidr-web/src/app/home/home.html
+++ b/decidr-web/src/app/home/home.html
@@ -1,7 +1,7 @@
 <div class="container mt-1">
   <div class="mb-5">
     <h1>Welcome to Decidr 🤔!</h1>
-    <p class="mt-2">You've come to the right place to help with your date night decisions.</p>
+    <p class="mt-2">You've come to the right place to help with your decisions.</p>
   </div>
   <hr class="mt-1" />
   <div>
@@ -58,7 +58,8 @@
 
     <div>
         <h2>Create new sets</h2>
-        <h3>🍿 Movies</h3>
+        <p>Select an option below to create your own decision set. You'll be able to vote on options, share your set with friends, and finally decide what to do!</p>
+        <h3 class="mt-4">🍿 Movies</h3>
         <button (click)="createPopularMoviesSet()" class="popular-button btn btn-primary btn-lg">🔥 Popular</button>
     </div>
   </div>
