--- a/decidr-web/src/app/home/home.scss
+++ b/decidr-web/src/app/home/home.scss
@@ -4,6 +4,10 @@ $success-color: #2ecc71;
 $card-border: #bdc3c7;
 $card-shadow: rgba(0, 0, 0, 0.1);
 
+p {
+    font-size: 18px;
+}
+
 .container {
   padding-top: 3rem;
 }
