--- a/decidr-web/src/app/home/home.scss
+++ b/decidr-web/src/app/home/home.scss
@@ -1,4 +1,3 @@
-// Colors & Fonts
 $primary-color: #3498db;
 $success-color: #2ecc71;
 $card-border: #bdc3c7;
@@ -70,7 +69,7 @@ p {
   justify-content: center;
 }
 
-.popular-button {
+.set-button {
   width: 200px;
   height: 150px;
   display: flex;
@@ -83,6 +82,7 @@ p {
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  color: white;
 
   &:hover {
     transform: translateY(-2px);
